--- a/exercises/multiplicationTable.html
+++ b/exercises/multiplicationTable.html
@@ -9,11 +9,11 @@
     multiplicationTable();
     function multiplicationTable()
     {
-        document.write("<fieldset><legend style='text-align: center'><h2>MULTIPLICATION TABLE</h2></legend>")
-        document.write("<table border=1 width=100%>")
+        document.write("<fieldset><legend style='text-align: center'><h2>MULTIPLICATION TABLE</h2></legend>");
+        document.write("<table border=1 width=100%>");
         for(let i=1;i<=9;i++)
         {
-            document.write("<tr>")
+            document.write("<tr>");
             for(let n=2;n<=9;n++)
                 document.write("<td>" +n + "x" + i +"="+ (n*i));
             document.write("</td>");
